# uintDebugger

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSES.md  RELEASING.md  changelog.md  readme.md
.github/workflows/: ci.yml  release.yml
qtUintDebugger/: CMakeLists.txt  NativeHeaders.h  NdbSchema.h  clsAPIImport.cpp  clsAPIImport.h  clsAntiAntiDebug.cpp  clsAntiAntiDebug.h  clsAppSettings.cpp  clsAppSettings.h  clsBreakpointHardware.cpp  clsBreakpointHardware.h  clsBreakpointManager.cpp  clsBreakpointManager.h  clsBreakpointMemory.cpp  clsBreakpointMemory.h  clsBreakpointSoftware.cpp  clsBreakpointSoftware.h  clsCallstackWorker.cpp  clsCallstackWorker.h  clsClipboardHelper.cpp  clsClipboardHelper.h  clsCommandParser.cpp  clsCommandParser.h  clsCrashHandler.cpp  clsCrashHandler.h  clsDisassembler.cpp  clsDisassembler.h  clsExpressionEvaluator.cpp  clsExpressionEvaluator.h  clsFunctionsViewWorker.cpp  clsFunctionsViewWorker.h  clsHelperClass.cpp  clsHelperClass.h  clsHexViewWorker.cpp  clsHexViewWorker.h  clsMemDump.cpp  clsMemDump.h  clsMemManager.cpp  clsMemManager.h  clsMemPool.cpp  (+126 more)
qtUintDebugger/clsDebugger/: clsDebugger.cpp  clsDebugger.h  clsDebuggerCallbacks.cpp  clsDebuggerPublicAPI.cpp
tests/: CMakeLists.txt  test_ndb_schema.cpp  test_updater_paths.cpp  test_updater_qt_paths.cpp
tools/: Invoke-UintDebuggerRelease.ps1  New-UpdateManifest.ps1  Test-ReleaseLayout.ps1
uintDebuggerUpdater/: CMakeLists.txt  PathSafety.h  README.md  UpdaterApply.h  main.cpp
uintDebuggerUpdater/UpdaterWidget/: ucheckupdateswidget.cpp  ucheckupdateswidget.h  ucheckupdateswidget.ui  ufiledownloader.cpp  ufiledownloader.h  ugitHubReleaseChecker.cpp  ugitHubReleaseChecker.h  updateitem.cpp  updateitem.h  uqtpathsafety.h  uupdatesmodel.cpp  uupdatesmodel.h  uupdatestableview.cpp  uupdatestableview.h  uupdatewidget.cpp  uupdatewidget.h  uupdatewidget.ui
